--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header> <!--cabeçalho-->
         <nav class="menu">  <!--navegação-->
            <ul>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
             <li><a href="#">Portifolio</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
