--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="Estilos/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <nav class="menu">
-                <span>Yasmin</span>
+        
 
             </ul>
     <header> <!--cabeçalho-->
@@ -18,7 +18,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="#">Portifolio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </div>
     </header>
