--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="#">Portifolio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </div>
     </header>
