--- a/sobre.html
+++ b/sobre.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f9f9f9;
+            color: #ffffff;
+            text-align: center;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
     <header> <!--cabeçalho-->
@@ -13,17 +26,40 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="#">Portifolio</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </div>
     </header>
     <h1>Autobiografia</h1>
-    <p> Olá, meu nome é Yasmin da Silva de Oliveira, tenho 15 anos de idade, sou morena, de cabelos pretos, lisos e longos, olhos pretos, pele parda, tenho 1,60 de altura e uso aparelho. Minha mãe tem 37 anos, meu pai tem 38 e eu tenho um irmão de 7 anos. Vivo com eles 4 em nossa casa.
-        Atualmente, eu faço o ensino médio integrado a um curso técnico, em Tecnologia e Informação para Internet, na escola Instituto Federal de São Paulo. Estou no primeiro ano, e minhas matérias favoritas são: Fundamentos da Internet, C-Web, Matemática e Educação Física. Eu também faço curso fora da escola. Comecei recentemente a fazer curso de inglês na KNN, estou gostando bastante e espero ter resultados logo.
-        No meu tempo livre, o que eu mais gosto de fazer é sair com meus amigos. Nós vamos à igreja, jogamos vôlei, saímos para comer, passeamos na cidade, vamos em aniversários; são com eles os meus melhores momentos. Eu também amo fazer academia. Faço há aproximadamente 1 ano já. É meu esporte preferido, além de melhorar meu físico e minha saúde, melhora meu psicológico. Uma das minhas melhores decisões foi começar a treinar. Recentemente, eu comecei a ter o hábito de ler. Não gostava muito, mas quando entrei no IFSP, comecei a criar o hábito. Esse ano já li 5 livros e confesso que estou gostando muito. Em relação às minhas amizades, quando eu entrei no IFSP, conheci várias pessoas incríveis, as quais mudaram minha vida. Fiz amizades que quero levar pro resto da minha vida, criei laços incríveis, tanto com pessoas da minha sala, quanto com pessoas do segundo e até terceiro ano. Fora da escola, eu tenho um grupo de amigos que eu amo muito também, meu grupo da igreja, os quais alegram muito meus finais de semana. Já tenho amizade com eles há um tempo e espero que seja para sempre. Tem uns amigos em específico que eu confio muito: a Mirela, minha prima, a Vitória, minha prima também, a Yasmim, minha amiga, e o Borges, meu "irmão". Esses aí, para mim, já não são mais amigos, são minha família. Eu sou evangélica e sirvo a Deus na Congregação Cristã no Brasil, nasci e cresci lá.
-        Agora vou destacar um momento inesquecível que aconteceu na minha vida, dentro de lá. Lá é minha vida, sinto coisas inexplicáveis quando estou lá. Minha maior alegria é quando chega a hora de eu ir para o culto. Esse ano, eu conheci um menino incrível e, felizmente, estou namorando com ele. Nunca vi um amor tão leve quanto o dele. Eu sou muito nova para saber se é para sempre, mas eu tenho a certeza de que eu quero estar com ele até o resto da minha vida.
-        Esse ano, o dia em que eu conheci o meu namorado, eu não fazia ideia de que ele ia se tornar o amor da minha vida. Nós tínhamos o mesmo grupo de amigos e marcamos de sair todo mundo, só que eu nunca tinha visto ele no grupo. Quando chegamos no lugar em que marcamos, todo mundo se divertiu muito, e teve uma hora que decidimos brincar da brincadeira do "Al" em uma roda cheia de amigos. Eu sou uma pessoa muito competitiva, e ele também era. No final, restou apenas eu e ele. Eu ganhei, ou ele deixou eu ganhar, não sei até hoje kkkkk, mas foi a partir dessa brincadeira que criamos uma amizade. Nunca esquecerei desse dia.
-        Agora, para o meu futuro, eu estou me esforçando muito. Quero seguir na área da informática, tenho um sonho de ser empresária, ter minha própria empresa. Aquela frase de "fazer os outros trabalhar por você, não você trabalhar para os outros" está na minha cabeça há um tempo. Eu espero conseguir realizar tudo aquilo que eu sonho, irei dar tudo de mim para alcançar meus objetivos. 
+    <h1>Um Pouco sobre Yasmin</h1>
+    <p>Olá, meu nome é Yasmin da Silva de Oliveira, tenho 15 anos de idade, sou morena, de cabelos pretos, lisos e longos, olhos pretos, pele parda, tenho 1,60 de altura e uso aparelho. 
+        Minha mãe tem 37 anos, meu pai tem 38 e eu tenho um irmão de 7 anos. 
+        Vivo com eles 4 em nossa casa. 
+        Atualmente, eu faço o ensino médio integrado a um curso técnico, em Tecnologia e Informação para Internet, na escola Instituto Federal de São Paulo. 
+        Estou no primeiro ano, e minhas matérias favoritas são: Fundamentos da Internet, C-Web, Matemática e Educação Física. 
+        Eu também faço curso fora da escola. Comecei recentemente a fazer curso de inglês na KNN, estou gostando bastante e espero ter resultados logo. 
+        No meu tempo livre, o que eu mais gosto de fazer é sair com meus amigos. Nós vamos à igreja, jogamos vôlei, saímos para comer, passeamos na cidade, vamos em aniversários; são com eles os meus melhores momentos.
+        Eu também amo fazer academia. Faço há aproximadamente 1 ano já. É meu esporte preferido, além de melhorar meu físico e minha saúde, melhora meu psicológico. 
+        Uma das minhas melhores decisões foi começar a treinar.
+    </p>
+
+    <p>Recentemente, eu comecei a ter o hábito de ler. Não gostava muito, mas quando entrei no IFSP, comecei a criar o hábito. 
+        Esse ano já li 5 livros e confesso que estou gostando muito. Em relação às minhas amizades, quando eu entrei no IFSP, conheci várias pessoas incríveis, as quais mudaram minha vida. 
+        Fiz amizades que quero levar pro resto da minha vida, criei laços incríveis, tanto com pessoas da minha sala, quanto com pessoas do segundo e até terceiro ano. 
+        Fora da escola, eu tenho um grupo de amigos que eu amo muito também, meu grupo da igreja, os quais alegram muito meus finais de semana. Já tenho amizade com eles há um tempo e espero que seja para sempre.
+        Tem uns amigos em específico que eu confio muito: a Mirela, minha prima, a Vitória, minha prima também, a Yasmim, minha amiga, e o Borges, meu "irmão". Esses aí, para mim, já não são mais amigos, são minha família.
+
+    <p> Eu sou evangélica e sirvo a Deus na Congregação Cristã no Brasil, nasci e cresci lá, Lá é minha vida, sinto coisas inexplicáveis quando estou lá.
+        Minha maior alegria é quando chega a hora de eu ir para o culto. Esse ano, eu conheci um menino incrível e, felizmente, estou namorando com ele. Nunca vi um amor tão leve quanto o dele. 
+        Eu sou muito nova para saber se é para sempre, mas eu tenho a certeza de que eu quero estar com ele até o resto da minha vida. Esse ano, o dia em que eu conheci o meu namorado, eu não fazia ideia de que ele ia se tornar o amor da minha vida.
+        Nós tínhamos o mesmo grupo de amigos e marcamos de sair todo mundo, só que eu nunca tinha visto ele no grupo. Quando chegamos no lugar em que marcamos, todo mundo se divertiu muito, e teve uma hora que decidimos brincar da brincadeira do "Al" em uma roda cheia de amigos.
+        Eu sou uma pessoa muito competitiva, e ele também era. No final, restou apenas eu e ele. Eu ganhei, ou ele deixou eu ganhar, não sei até hoje kkkkk, mas foi a partir dessa brincadeira que criamos uma amizade.
+        Nunca esquecerei desse dia.</p>
+
+    <p>Agora, para o meu futuro, eu estou me esforçando muito. Quero seguir na área da informática, tenho um sonho de ser empresária, ter minha própria empresa.
+        Aquela frase de "fazer os outros trabalhar por você, não você trabalhar para os outros" está na minha cabeça há um tempo. 
+        Eu espero conseguir realizar tudo aquilo que eu sonho, irei dar tudo de mim para alcançar meus objetivos.
+
     </p>
 </body>
 </html>
