--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <nav class="menu">
-        
+                <span>Yasmin</span>
 
             </ul>
     <header> <!--cabeçalho-->
@@ -18,7 +18,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="#">Portifolio</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </div>
     </header>
